# ATLAS-Presidential-AI-Challenge

./: .env.backup  .env.development  .env.e8.template  .env.example  .env.paper  .env.prod  .env.quant_research  .env.template  .env.txt  .gitignore  .pre-commit-config.yaml  4K_OPTIONS_DEPLOYMENT.md  AB_TEST_CONFIG.md  ACCOUNT_DEATH_ANALYSIS.py  ACCOUNT_SAVE_PROTOCOL.md  ACTUALLY_WORKING_TRADER.py  ADD_E8_CREDENTIALS.md  AGENTIC_OPTIONS_SCANNER_SP500.py  AGENTS.md  AGENT_UPGRADES_SUMMARY.md  AGGRESSIVE_MODE_CONFIG.json  ALL_FIXES_COMPLETED.md  ALL_FIXES_SUMMARY.md  ALPACA_CONNECTION_STATUS.md  ALPACA_ENDPOINT_FIX.md  API_VS_DOWNLOADED_DATA.md  AUTOMATION_SUMMARY.txt  AUTOMATION_WORKFLOW.txt  AUTO_CLOSE_NEWS_PROTECTION.md  AUTO_TRADING_DASHBOARD.bat  BACKTEST_COMPARISON_GUIDE.md  BACKTEST_FOREX_STRATEGY.py  CHECK_FOREX_ELITE_STATUS.bat  CHECK_FOREX_STATUS.bat  CHECK_IF_BOT_RUNNING.py  CHECK_STATUS.bat  CLEANUP_CODEBASE.bat  CLEANUP_LOSERS.bat  CODEBASE_ANALYSIS.md  CODEBASE_CLEANUP_PLAN.md  (+1415 more)
.claude/: settings.local.json
BOTS/: E8_FOREX_BOT.py  E8_TRADELOCKER_ADAPTER.py  E8_ULTRA_CONSERVATIVE_BOT.py  HYBRID_OANDA_TRADELOCKER.py  daily_dd_tracker.py  demo_validator.py  e8_bot_state.json  e8_score_log.csv  match_trader_config.json  news_calendar_cache.json  news_filter.py
CRYPTO/: WORKING_CRYPTO_CFT.py
DEPRECATED/: README.md
FOREX/: WORKING_FOREX_E8.py
FUTURES/: WORKING_FUTURES_APEX.py
LEAN-Strategies/: config.json
LEAN_BACKTEST/: config.json  main.py
PRODUCTION/: .env.paper  COMPLETE_QUANT_ARSENAL.md  CONTINUOUS_RD_SYSTEM.md  LAUNCH_FULL_SYSTEM.bat  LAUNCH_WEEK1_RD_SYSTEMS.bat  LEAN_ENGINE_INTEGRATION.md  ML_AI_SYSTEMS_STATUS.md  PRODUCTION_README.md  QUANT_LIBRARY_INVENTORY.md  RD_SYSTEM_STATUS.md  README_ADVANCED_SYSTEM.md  REAL_EXECUTION_ENABLED.md  STATUS_SUMMARY.md  STRATEGY_QUALITY_ASSESSMENT.md  SYSTEM_ARCHITECTURE_COMPLETE.md  SYSTEM_STATUS.md  THURSDAY_FORECAST.md  WEDNESDAY_ACCOMPLISHMENTS.md  WEDNESDAY_MORNING_STATUS.md  WEEK1_ROI_PROJECTION.md  WEEK1_TO_NOVEMBER_MASTER_PLAN.md  advanced_system_integrator.py  check_options_capability.py  check_positions.py  check_rd_progress.py  continuous_week1_scanner.py  execute_intc_now.py  forex_futures_rd_agent.py  quick_market_check.py  rd_validated_strategies_20250930_122623.json  rd_validated_strategies_20250930_123939.json  rd_validated_strategies_20250930_130949.json  rd_validated_strategies_20250930_160815.json  rd_validated_strategies_20250930_161350.json  rd_validated_strategies_20251001_174213.json  test_quick_execution.py  todays_performance.py  week1_continuous_trade_1_20251001_0633.json  week1_continuous_trade_1_20251001_0816.json  week1_continuous_trade_1_20251001_0834.json  (+4 more)
SHARED/: ai_confirmation.py  kelly_criterion.py  multi_timeframe.py  technical_analysis.py  trade_logger.py
UTILITIES/: README.md  analyze_current_trades.py  calculate_pnl.py  check_oanda_positions.py  check_trade_peak.py  check_why_no_trades.py  close_all_positions.py  close_position_now.py  force_scan_now.py  forex_calendar.py  monitor_new_bot.py  performance_analytics.py  quick_status.py  trade_journal.py
agents/: README_MARKET_DATA_INGESTOR.md  README_NEWS_SENTIMENT_AGENT.md  README_SATELLITE_DATA.md  __init__.py  adaptive_optimizer_agent.py  advanced_ml_engine.py  advanced_nlp_agent.py  autonomous_brain.py  backtrader_engine.py  broker_integration.py  broker_integration.py.backup_20250908_123229  cboe_data_agent.py  cross_asset_correlation_agent.py  economic_data_agent.py  enhanced_financial_analytics.py  enhanced_ml_ensemble_agent.py  enhanced_options_pricing.py  enhanced_options_pricing_engine.py  enhanced_regime_detection_agent.py  enhanced_sentiment_analyzer.py  enhanced_technical_analysis.py  enhanced_workflow_coordinator.py  execution_engine_agent.py  exit_strategy_agent.py  finance_database_agent.py  finance_integration_agent.py  finnhub_data_provider.py  global_market_agent.py  langgraph_workflow.py  learning_optimizer_agent.py  live_data_manager.py  live_trading_engine.py  long_term_core_agent.py  market_data_ingestor.py  market_microstructure_agent.py  master_trading_orchestrator.py  mean_reversion_agent.py  mean_reversion_agent_enhancements.py  ml4t_agent.py  ml_strategy_evolution.py  (+32 more)
agents_backup_20251018/: __init__.py  advanced_ml_finance_agent.py  advanced_monte_carlo_engine.py  advanced_risk_management.py  advanced_strategy_generator.py  advanced_technical_analysis.py  agent_visualizers.py  arbitrage_agent.py  broker_integration.py  communication_protocols.py  cross_asset_correlation_agent.py  enhanced_communication.py  enhanced_regime_detection_agent.py  enhanced_technical_analysis_multiapi.py  exit_strategy_agent.py  global_market_agent.py  langgraph_workflow.py  learning_engine.py  learning_optimizer_agent.py  market_data_ingestor.py  market_making_agent.py  market_microstructure_agent.py  mean_reversion_agent_enhancements.py  ml_prediction_engine.py  model_loader.py  momentum_agent_enhancements.py  multi_api_data_provider.py  options_broker.py  options_trading_agent.py  options_volatility_agent.py  options_volatility_agent_minimal.py  paper_trading_agent.py  performance_dashboard.py  performance_monitoring_agent.py  pyportfolioopt_engine.py  pytorch_ml_engine.py  quant_integration.py  quantitative_integration_hub.py  quantlib_pricing.py  sequential_api_manager.py  (+7 more)
ai/: enhanced_models.py  enhanced_models_v2.py  ml_ensemble_wrapper.py
analysis/: multitimeframe_analyzer.py
analytics/: kelly_criterion_sizer.py  log_analyzer.py  market_data_analyzer.py  options_flow_detector.py  portfolio_correlationanalyzer.py  sentiment_analyzer.py  volatility_surface_analyzer.py
backend/: Dockerfile  main.py  requirements.txt  simple_api.py
backtesting/: BACKTEST_SAFE_VS_AGGRESSIVE.py  SIMPLE_BACKTEST.py  comprehensive_backtesting_environment.py  extended_backtester.py  fetch_oanda_data_for_backtest.py  strategy_backtester.py
backup_20250914_2335/: mega_elite_strategies_20250914_220216.json  mega_elite_strategies_20250914_230400.json  performance_metrics.json  qlib_factor_research_20250914_220217.json  (+2 more)
(+1182 files in other folders)
