[tool.poetry]
name = "langgraph-trading-system"
version = "0.1.0"
description = "LangGraph Adaptive Multi-Strategy AI Trading System - Autonomous trading platform with intelligent agents"
authors = ["Trading System Team <team@tradingsystem.ai>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "strategies"}, {include = "data"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
# LangGraph and AI/ML dependencies
langgraph = "^0.0.60"
langchain = "^0.1.0"
langchain-openai = "^0.0.8"
langchain-google-genai = "^0.0.11"
transformers = "^4.36.0"
torch = "^2.1.0"
# Financial data and trading
alpaca-py = "^0.8.0"
polygon-api-client = "^1.12.0"
yfinance = "^0.2.18"
# Data processing and analysis
pandas = "^2.1.0"
numpy = "^1.24.0"
scipy = "^1.11.0"
scikit-learn = "^1.3.0"
ta-lib = "^0.4.28"
# Database and caching
psycopg2-binary = "^2.9.7"
redis = "^5.0.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
# Web and API
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
httpx = "^0.25.0"
# Monitoring and logging
prometheus-client = "^0.19.0"
structlog = "^23.2.0"
# Message queues
kafka-python = "^2.0.2"
# Configuration and environment
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
# Utilities
click = "^8.1.0"
rich = "^13.7.0"
typer = "^0.9.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
# Code quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
# Development tools
jupyter = "^1.0.0"
ipython = "^8.17.0"
# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[tool.poetry.group.backtest.dependencies]
# Backtesting specific dependencies
backtrader = "^1.9.78"
zipline-reloaded = "^3.0.0"
vectorbt = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "strategies", "data", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "polygon.*",
    "ta.*",
    "backtrader.*",
    "vectorbt.*",
    "kafka.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "backtest: Backtesting tests",
    "slow: Slow running tests",
    "live: Tests requiring live market data"
]

[tool.coverage.run]
source = ["agents", "strategies", "data", "config"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]