[tool.poetry]
name = "langgraph-trading-system"
version = "0.1.0"
description = "LangGraph Adaptive Multi-Strategy AI Trading System - Autonomous trading platform with intelligent agents"
authors = ["Trading System Team <team@tradingsystem.ai>"]
readme = "README.md"
packages = [{include = "agents"}, {include = "strategies"}, {include = "data"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
# Configuration and environment
pydantic = "^2.7.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
# Utilities
click = "^8.1.0"
rich = "^13.7.0"
typer = "^0.9.0"
# Logging
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
# Code quality
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
# Development tools
jupyter = "^1.0.0"
ipython = "^8.17.0"
# Documentation
mkdocs = "^1.5.0"
mkdocs-material = "^9.4.0"

[tool.poetry.group.backtest.dependencies]
# Backtesting specific dependencies (will be added later)
# backtrader = "^1.9.78"
# zipline-reloaded = "^3.0.0"
# vectorbt = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "strategies", "data", "config"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "alpaca.*",
    "polygon.*",
    "ta.*",
    "backtrader.*",
    "vectorbt.*",
    "kafka.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "backtest: Backtesting tests",
    "slow: Slow running tests",
    "live: Tests requiring live market data"
]

[tool.coverage.run]
source = ["agents", "strategies", "data", "config"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError"
]